Refactor AuthorizationServerConfig to use Java 8 stream API for mapping authorities